@@ -6,38 +6,35 @@ import java.util.Arrays;
 import org.springframework.context.annotation.*;
 import org.springframework.web.cors.*;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
-public class CorsConfig {
+@EnableWebMvc
+public class CorsConfig implements WebMvcConfigurer{
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+
+        configuration.setAllowedOrigins(List.of(
+                "http://127.0.0.1:8080",
+                "https://shuttle-match-be.onrender.com",
+                "https://shuttle-smash.vercel.app",
+                "http://localhost:5173",
+                "http://localhost:5174"
+        ));
+
         configuration.setAllowedMethods(Arrays.asList("*"));
-        //configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+
         configuration.setAllowCredentials(true);
-        configuration.addAllowedHeader("*");
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-//    @Override
-//    public void addCorsMappings(CorsRegistry registry) {
-//        registry.addMapping("/**") // or specify a more specific path
-//                .allowedOrigins("*") // Specify the allowed origins
-//                .allowedMethods("*") // Specify the allowed methods
-//                .allowedHeaders("*")
-//                .maxAge(3600); // Cache the CORS configuration for 1 hour
-//    }
-
-//    @Override
-//    public void addCorsMappings(CorsRegistry registry) {
-//        registry.addMapping("/**").allowedMethods("*");
-//    }
 
 }
